--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Shows a gui dialog box to choose files/folders on server side",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "example": "node ./example.js"
   },
   "repository": {
     "type": "git",
